EO GC logging + minor fixes